src/objects/Vacation_Days__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeSheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TimeSheet</label>
        <referenceTo>TimeSheet__c</referenceTo>
        <relationshipLabel>Vacation Days</relationshipLabel>
        <relationshipName>Vacation_Days</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vacation_Day__c</fullName>
        <label>Vacation Day</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Vacation Day</label>
    <nameField>
        <displayFormat>VD-{0000}</displayFormat>
        <label>Vacation Days Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vacation Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>